--- a/index.html
+++ b/index.html
@@ -56,32 +56,32 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <a href="pages/tortas.html">
-                    <img src="img/milhojas-zoom.jpg" class="d-block w-100" alt="torta milhojas">  
-                    </a>    
+                        <img src="img/milhojas-zoom.jpg" class="d-block w-100" alt="torta milhojas">
+                    </a>
                 </div>
                 <div class="carousel-item">
                     <a href="pages/tartas.html">
-                    <img src="img/beni-entera.jpg" class="d-block w-100" alt="tarta cabsha">   
-                    </a>    
+                        <img src="img/beni-entera.jpg" class="d-block w-100" alt="tarta cabsha">
+                    </a>
                 </div>
                 <div class="carousel-item">
                     <a href="pages/pequenas-tentaciones.html">
-                    <img src="img/bandeja-de-masas-zoom.jpg" class="d-block w-100" alt="bandeja de masas"> 
+                        <img src="img/bandeja-de-masas-zoom.jpg" class="d-block w-100" alt="bandeja de masas">
                     </a>
-                    </div>
+                </div>
                 <div class="carousel-item">
                     <a href="pages/tortas.html">
-                    <img src="img/cheesecake-zoom.jpg" class="d-block w-100" alt="cheesecake">
-                    </a> 
-                </div>
-                <div class="carousel-item">
-                    <a href="pages/pequenas-tentaciones.html">
-                    <img src="img/brownie-entero.jpg" class="d-block w-100" alt="brownie">    
+                        <img src="img/cheesecake-zoom.jpg" class="d-block w-100" alt="cheesecake">
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a href="pages/pequenas-tentaciones.html">
-                    <img src="img/alfajor-nuez-zoom.jpg" class="d-block w-100" alt="alfajor de nuez">   
+                        <img src="img/brownie-entero.jpg" class="d-block w-100" alt="brownie">
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a href="pages/pequenas-tentaciones.html">
+                        <img src="img/alfajor-nuez-zoom.jpg" class="d-block w-100" alt="alfajor de nuez">
                     </a>
                 </div>
             </div>
@@ -106,36 +106,44 @@
                     aria-label="Slide 3"></button>
             </div>
     </main>
-        </div>
+    
 
     <footer>
-        <ul class="footer">
-            <li>NAVEGACIÓN</li>
-            <li>
-                <a href="index.html">Productos</a>
-            </li>
-            <li>
-                <a href="pages/contacto.html">Contacto</a>
-            </li>
-        </ul>
-        <div class="contacto">
-            <p>Contactanos</p>
-            <div class="iconos-redes">
-                <img class="iconos" src="img/whatsapp.png" alt="logo whatsapp">
-                <p>+54 9 3515 08-7623</p>
+        <div class="footer container text-center">
+            <div class="row">
+                <div class="col">
+                    NAVEGACIÓN
+                </div>
+                <div class="col">
+                    CONTACTANOS
+                </div>
             </div>
-        </div>
-        <div class="redes-sociales">
-            <p>REDES SOCIALES</p>
-            <div class="iconos-redes">
-                <a href="https://www.instagram.com/lunavaspastelera/" target="_blank"><img class="iconos"
-                        src="img/instagram.png" alt="logo instagram"></a>
-                <a href="https://www.facebook.com/LuciaNavasPasteleria" target="_blank"> <img class="iconos"
-                        src="img/facebook.png" alt="logo facebook"></a>
+
+
+            <div class="row">
+                <div class="col">
+                    <a href="index.html">Productos</a>
+                </div>
+                <div class="col">
+                    <img class="iconos" src="img/whatsapp.png" alt="logo whatsapp">
+                    +54 9 3515 08-7623
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <a href="pages/contacto.html">Contacto</a>
+                </div>
+                <div class="col">
+                    <a href="https://www.instagram.com/lunavaspastelera/" target="_blank"><img class="iconos"
+                            src="img/instagram.png" alt="logo instagram"></a>
+                    <a href="https://www.facebook.com/LuciaNavasPasteleria" target="_blank"> <img class="iconos"
+                            src="img/facebook.png" alt="logo facebook"></a>
+                </div>
             </div>
         </div>
     </footer>
-    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
