--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -46,7 +46,8 @@
             </div>
         </nav>
     </header>
-    <section id="productos">
+    <section id="logo">
+        <img src="../img/LogoLN.png" alt="logo Lucia Navas">
         <h1>CONTACTO</h1>
     </section>
     <div class="info-contacto">
@@ -88,29 +89,37 @@
         <p>Ledesma y Ceballos 1293</p>
     </div>
     <footer>
-        <ul class="footer">
-            <li>NAVEGACIÓN</li>
-            <li>
-                <a href="../index.html">Productos</a>
-            </li>
-            <li>
-                <a href="contacto.html">Contacto</a>
-            </li>
-        </ul>
-        <div class="contacto">
-            <p>Contactanos</p>
-            <div class="iconos-redes">
-                <img class="iconos" src="../img/whatsapp.png" alt="logo whatsapp">
-                <p>+54 9 3515 08-7623</p>
+        <div class="footer container text-center">
+            <div class="row">
+                <div class="col">
+                    NAVEGACIÓN
+                </div>
+                <div class="col">
+                    CONTACTANOS
+                </div>
             </div>
-        </div>
-        <div class="redes-sociales">
-            <p>REDES SOCIALES</p>
-            <div class="iconos-redes">
-                <a href="https://www.instagram.com/lunavaspastelera/" target="_blank"><img class="iconos"
-                        src="../img/instagram.png" alt="logo instagram"></a>
-                <a href="https://www.facebook.com/LuciaNavasPasteleria" target="_blank"> <img class="iconos"
-                        src="../img/facebook.png" alt="logo facebook"></a>
+
+
+            <div class="row">
+                <div class="col">
+                    <a href="../index.html">Productos</a>
+                </div>
+                <div class="col">
+                    <img class="iconos" src="../img/whatsapp.png" alt="logo whatsapp">
+                    +54 9 3515 08-7623
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <a href="contacto.html">Contacto</a>
+                </div>
+                <div class="col">
+                    <a href="https://www.instagram.com/lunavaspastelera/" target="_blank"><img class="iconos"
+                            src="../img/instagram.png" alt="logo instagram"></a>
+                    <a href="https://www.facebook.com/LuciaNavasPasteleria" target="_blank"> <img class="iconos"
+                            src="../img/facebook.png" alt="logo facebook"></a>
+                </div>
             </div>
         </div>
     </footer>
