--- a/pages/tartas.html
+++ b/pages/tartas.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,104 +47,127 @@
             </div>
         </nav>
     </header>
-    <section id="productos">
+
+    <section id="logo">
+        <img src="../img/LogoLN.png" alt="logo Lucia Navas">
         <h1>TARTAS</h1>
     </section>
+
     <main>
-        <div class="padre-cards">
+        <div class="container-fluid row padre-cards">
 
             <!--tarta beni-->
-            <div class="card">
-                <img class="torta" src="../img/beni-zoom.jpg" alt="tarta cabsha">
-                <div class="descripción-producto">
-                    <p class="nombre-producto">Tarta Beni</p>
-                    <p class="precio-producto">$ 7000</p>
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="card">
+                    <img class="torta" src="../img/beni-zoom.jpg" alt="tarta cabsha">
+                    <div class="descripción-producto">
+                        <p class="nombre-producto">Tarta Beni</p>
+                        <p class="precio-producto">$ 7000</p>
+                    </div>
+                    <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
                 </div>
-                <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
             </div>
 
             <!--tarta de frutillas-->
-            <div class="card">
-                <img class="torta" src="../img/frutillas-entera.jpg" alt="tarta de frutillas">
-                <div class="descripción-producto">
-                    <p class="nombre-producto">Tarta de Frutillas</p>
-                    <p class="precio-producto">$ 7000</p>
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="card">
+                    <img class="torta" src="../img/frutillas-entera.jpg" alt="tarta de frutillas">
+                    <div class="descripción-producto">
+                        <p class="nombre-producto">Tarta de Frutillas</p>
+                        <p class="precio-producto">$ 7000</p>
+                    </div>
+                    <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
                 </div>
-                <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
             </div>
 
             <!--tarta de maracuya-->
-            <div class="card">
-                <img class="torta" src="../img/maracuya-zoom.jpg" alt="tarta de maracuya">
-                <div class="descripción-producto">
-                    <p class="nombre-producto">Tarta de Maracuya</p>
-                    <p class="precio-producto">$ 7000</p>
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="card">
+                    <img class="torta" src="../img/maracuya-zoom.jpg" alt="tarta de maracuya">
+                    <div class="descripción-producto">
+                        <p class="nombre-producto">Tarta de Maracuya</p>
+                        <p class="precio-producto">$ 7000</p>
+                    </div>
+                    <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
                 </div>
-                <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
             </div>
 
             <!--tarta de peras y almendras-->
-            <div class="card">
-                <img class="torta" src="../img/peras-y-almendras-entera.jpg" alt="tarta de peras y almendras">
-                <div class="descripción-producto">
-                    <p class="nombre-producto">Tarta de Peras y Almendras</p>
-                    <p class="precio-producto">$ 6000</p>
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="card">
+                    <img class="torta" src="../img/peras-y-almendras-entera.jpg" alt="tarta de peras y almendras">
+                    <div class="descripción-producto">
+                        <p class="nombre-producto">Tarta de Peras y Almendras</p>
+                        <p class="precio-producto">$ 6000</p>
+                    </div>
+                    <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
                 </div>
-                <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
             </div>
 
             <!--pasta frolla-->
-            <div class="card">
-                <img class="torta" src="../img/frolla-zoom.jpg" alt="pasta frolla">
-                <div class="descripción-producto">
-                    <p class="nombre-producto">Pasta Frolla</p>
-                    <p class="precio-producto">$ 3500</p>
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="card">
+                    <img class="torta" src="../img/frolla-zoom.jpg" alt="pasta frolla">
+                    <div class="descripción-producto">
+                        <p class="nombre-producto">Pasta Frolla</p>
+                        <p class="precio-producto">$ 3500</p>
+                    </div>
+                    <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
                 </div>
-                <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
             </div>
 
             <!--tarta de coco-->
-            <div class="card">
-                <img class="torta" src="../img/coco-zoom.jpg" alt="tarta de coco">
-                <div class="descripción-producto">
-                    <p class="nombre-producto">Tarta de Coco y Dulce de Leche</p>
-                    <p class="precio-producto">$ 7000</p>
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="card">
+                    <img class="torta" src="../img/coco-zoom.jpg" alt="tarta de coco">
+                    <div class="descripción-producto">
+                        <p class="nombre-producto">Tarta de Coco y Dulce de Leche</p>
+                        <p class="precio-producto">$ 7000</p>
+                    </div>
+                    <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
                 </div>
-                <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
             </div>
         </div>
-        
+
     </main>
     <footer>
-        <ul class="footer">
-            <li>NAVEGACIÓN</li>
-            <li>
-                <a href="../index.html">Productos</a>
-            </li>
-            <li>
-                <a href="contacto.html">Contacto</a>
-            </li>
-        </ul>
-        <div class="contacto">
-            <p>Contactanos</p>
-            <div class="iconos-redes">
-                <img class="iconos" src="../img/whatsapp.png" alt="logo whatsapp">
-                <p>+54 9 3515 08-7623</p>
+        <div class="footer container text-center">
+            <div class="row">
+                <div class="col">
+                    NAVEGACIÓN
+                </div>
+                <div class="col">
+                    CONTACTANOS
+                </div>
             </div>
-        </div>
-        <div class="redes-sociales">
-            <p>REDES SOCIALES</p>
-            <div class="iconos-redes">
-                <a href="https://www.instagram.com/lunavaspastelera/" target="_blank"><img class="iconos"
-                        src="../img/instagram.png" alt="logo instagram"></a>
-                <a href="https://www.facebook.com/LuciaNavasPasteleria" target="_blank"> <img class="iconos"
-                        src="../img/facebook.png" alt="logo facebook"></a>
+
+
+            <div class="row">
+                <div class="col">
+                    <a href="../index.html">Productos</a>
+                </div>
+                <div class="col">
+                    <img class="iconos" src="../img/whatsapp.png" alt="logo whatsapp">
+                    +54 9 3515 08-7623
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <a href="contacto.html">Contacto</a>
+                </div>
+                <div class="col">
+                    <a href="https://www.instagram.com/lunavaspastelera/" target="_blank"><img class="iconos"
+                            src="../img/instagram.png" alt="logo instagram"></a>
+                    <a href="https://www.facebook.com/LuciaNavasPasteleria" target="_blank"> <img class="iconos"
+                            src="../img/facebook.png" alt="logo facebook"></a>
+                </div>
             </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
