--- a/pages/pequenas-tentaciones.html
+++ b/pages/pequenas-tentaciones.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap" rel="stylesheet">
     <title>Pequeñas Tentaciones</title>
+    <link rel="shortcut icon" href="../img/logo.ico">
 </head>
 
 <body>
@@ -143,32 +144,32 @@
     </main>
 
     <footer>
-        <div class="footer container text-center">
+        <div class="footer container">
             <div class="row">
-                <div class="col">
+                <div class="col-6 col-lg-9">
                     NAVEGACIÓN
                 </div>
-                <div class="col">
+                <div class="col-6 col-lg-3">
                     CONTACTANOS
                 </div>
             </div>
 
 
             <div class="row">
-                <div class="col">
+                <div class="col-6 col-lg-9">
                     <a href="../index.html">Productos</a>
                 </div>
-                <div class="col">
+                <div class="col-6 col-lg-3">
                     <img class="iconos" src="../img/whatsapp.png" alt="logo whatsapp">
                     +54 9 3515 08-7623
                 </div>
             </div>
 
             <div class="row">
-                <div class="col">
+                <div class="col-6 col-lg-9">
                     <a href="contacto.html">Contacto</a>
                 </div>
-                <div class="col">
+                <div class="col-6 col-lg-3">
                     <a href="https://www.instagram.com/lunavaspastelera/" target="_blank"><img class="iconos"
                             src="../img/instagram.png" alt="logo instagram"></a>
                     <a href="https://www.facebook.com/LuciaNavasPasteleria" target="_blank"> <img class="iconos"
