--- a/pages/tortas.html
+++ b/pages/tortas.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap" rel="stylesheet">
     <title>Tortas</title>
+    <link rel="shortcut icon" href="../img/logo.ico">
 </head>
 
 <body>
@@ -51,7 +52,7 @@
         <h1>TORTAS</h1>
     </section>
     <main>
-        <div class="container-fluid row justify-content-center padre-cards">
+        <div class="container-fluid row  padre-cards">
 
         <!--chaja-->
             <div class="col-12 col-md-6 col-lg-3">
@@ -135,49 +136,36 @@
                     </div>
                     <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
                 </div>
-            </div>
-
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="card">
-                    <img class="torta" src="../img/tiramisu-zoom.jpg" alt="tiramisu">
-                    <div class="descripción-producto">
-                        <p class="nombre-producto">Tiramisu</p>
-                        <p class="precio-producto">$ 7000</p>
-                    </div>
-                    <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
-                    </div>
-                </div>
-            </div>
-        
-        
+            </div>        
     </main>
+
     <footer>
-        <div class="footer container text-center">
+        <div class="footer container">
             <div class="row">
-                <div class="col">
+                <div class="col-6 col-lg-9">
                     NAVEGACIÓN
                 </div>
-                <div class="col">
+                <div class="col-6 col-lg-3">
                     CONTACTANOS
                 </div>
             </div>
 
 
             <div class="row">
-                <div class="col">
+                <div class="col-6 col-lg-9">
                     <a href="../index.html">Productos</a>
                 </div>
-                <div class="col">
-                    <img class="iconos" src="../img/whatsapp.png" alt="logo whatsapp">
+                <div class="col-6 col-lg-3">
+                    <img class="iconos" src="../img/whatsapp.png " alt="logo whatsapp">
                     +54 9 3515 08-7623
                 </div>
             </div>
 
             <div class="row">
-                <div class="col">
+                <div class="col-6 col-lg-9">
                     <a href="contacto.html">Contacto</a>
                 </div>
-                <div class="col">
+                <div class="col-6 col-lg-3">
                     <a href="https://www.instagram.com/lunavaspastelera/" target="_blank"><img class="iconos"
                             src="../img/instagram.png" alt="logo instagram"></a>
                     <a href="https://www.facebook.com/LuciaNavasPasteleria" target="_blank"> <img class="iconos"
