--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap" rel="stylesheet">
     <title>Contacto</title>
+    <link rel="shortcut icon" href="../img/logo.ico">
 </head>
 
 <body>
@@ -79,7 +80,7 @@
             <label for="telefono">TELEFONO</label>
             <input type="number" id="telefono" class="formulario">
             <Label for="mensaje">MENSAJE</Label>
-            <textarea id="mensaje" cols="30" rows="10">MENSAJE</textarea>
+            <textarea id="mensaje" cols="30" rows="10"></textarea>
             <input type="submit" value="Enviar">
         </form>
     </div>
@@ -89,32 +90,32 @@
         <p>Ledesma y Ceballos 1293</p>
     </div>
     <footer>
-        <div class="footer container text-center">
-            <div class="row">
-                <div class="col">
+        <div class="footer container">
+            <div class="row ">
+                <div class="col-6 col-lg-9">
                     NAVEGACIÓN
                 </div>
-                <div class="col">
+                <div class="col-6 col-lg-3">
                     CONTACTANOS
                 </div>
             </div>
 
 
             <div class="row">
-                <div class="col">
+                <div class="col-6 col-lg-9">
                     <a href="../index.html">Productos</a>
                 </div>
-                <div class="col">
+                <div class="col-6 col-lg-3">
                     <img class="iconos" src="../img/whatsapp.png" alt="logo whatsapp">
                     +54 9 3515 08-7623
                 </div>
             </div>
 
             <div class="row">
-                <div class="col">
+                <div class="col-6 col-lg-9">
                     <a href="contacto.html">Contacto</a>
                 </div>
-                <div class="col">
+                <div class="col-6 col-lg-3">
                     <a href="https://www.instagram.com/lunavaspastelera/" target="_blank"><img class="iconos"
                             src="../img/instagram.png" alt="logo instagram"></a>
                     <a href="https://www.facebook.com/LuciaNavasPasteleria" target="_blank"> <img class="iconos"
