--- a/pages/pequenas-tentaciones.html
+++ b/pages/pequenas-tentaciones.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap" rel="stylesheet">
     <title>Pequeñas Tentaciones</title>
+    <meta name="description=" content="Venta de especialidades dulces por porciones, alfajores y bandejas de masas para eventos.">
+    <meta name="keywords" content="reposteria, alfajores, porciones, bandeja de masas, dulces, eventos, mesa dulce, crema, dulce de leche, chocolate, coco, alfajores de nuez">
     <link rel="shortcut icon" href="../img/logo.ico">
 </head>
 
@@ -50,7 +52,7 @@
     </header>
 
     <section id="logo">
-        <img src="../img/LogoLN.png" alt="logo Lucia Navas">
+        <img src="../img/LogoLN.webp" alt="logo Lucia Navas">
         <h1>PEQUEÑAS TENTACIONES</h1>
     </section>
 
@@ -60,7 +62,7 @@
             <!--alfajores de maicena-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/alfajor-maicena-entero.jpg" alt="alfajores de maicena">
+                    <img class="torta" src="../img/alfajor-maicena-entero.webp" alt="alfajores de maicena">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Alfajor de Maicena</p>
                         <p class="precio-producto">$ 200</p>
@@ -72,7 +74,7 @@
             <!--alfajores de nuez-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/alfajor-nuez-zoom.jpg" alt="alfajores de nuez">
+                    <img class="torta" src="../img/alfajor-nuez-entero.webp" alt="alfajores de nuez">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Alfajor de Nuez</p>
                         <p class="precio-producto">$ 350</p>
@@ -84,7 +86,7 @@
             <!--bandeja de masas-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/bandeja-de-masas-zoom.jpg" alt="bandeja de masas">
+                    <img class="torta" src="../img/bandeja-de-masas-zoom.webp" alt="bandeja de masas">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Bandeja de Masas</p>
                         <p class="precio-producto">$ 5500</p>
@@ -96,7 +98,7 @@
             <!--cuadrados de brownie-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/brownie-entero.jpg" alt="cuadrados de brownie">
+                    <img class="torta" src="../img/brownie-entero.webp" alt="cuadrados de brownie">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Cuadrado de Brownie</p>
                         <p class="precio-producto">$ 300</p>
@@ -108,7 +110,7 @@
             <!--alfajores de chocolate-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/alfajores-choco.jpg" alt="alfajores de chocolate">
+                    <img class="torta" src="../img/alfajores-choco.webp" alt="alfajores de chocolate">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Alfajor de Chocolate</p>
                         <p class="precio-producto">$ 300</p>
@@ -120,7 +122,7 @@
             <!--cuadrados de frolla-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/frolla-zoom.jpg" alt="cuadrados de frolla">
+                    <img class="torta" src="../img/frolla-zoom.webp" alt="cuadrados de frolla">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Cuadrado de Frolla</p>
                         <p class="precio-producto">$ 300</p>
@@ -132,7 +134,7 @@
             <!--cuadrados de coco-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/coco-zoom.jpg" alt="cuadrados de coco">
+                    <img class="torta" src="../img/coco-zoom.webp" alt="cuadrados de coco">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Cuadrado de Coco</p>
                         <p class="precio-producto">$ 350</p>
@@ -161,7 +163,7 @@
                 </div>
                 <div class="col-6 col-lg-3">
                     <img class="iconos" src="../img/whatsapp.png" alt="logo whatsapp">
-                    +54 9 3515 08-7623
+                    <p class="num-tel">+54 9 3515 08-7623</p>
                 </div>
             </div>
 
