--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasteleria</title>
+    <meta name="description=" content="Lucia Navas Pastelería ofrece tortas, tartas y especialidades de reposteria de alta calidad.">
+    <meta name="keywords" content="reposteria, tortas, tartas, dulces, eventos, mesa dulce, crema, dulce de leche, chocolate">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap" rel="stylesheet">
@@ -50,39 +52,39 @@
     </header>
 
     <section id="logo">
-        <img src="img/LogoLN.png" alt="logo Lucia Navas">
+        <img src="img/LogoLN.webp" alt="logo Lucia Navas">
     </section>
     <main>
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <a href="pages/tortas.html">
-                        <img src="img/milhojas-zoom.jpg" class="d-block w-100" alt="torta milhojas">
+                        <img src="img/milhojas-zoom.webp" class="d-block w-100" alt="torta milhojas">
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a href="pages/tartas.html">
-                        <img src="img/beni-entera.jpg" class="d-block w-100" alt="tarta cabsha">
+                        <img src="img/beni-entera.webp" class="d-block w-100" alt="tarta cabsha">
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a href="pages/pequenas-tentaciones.html">
-                        <img src="img/bandeja-de-masas-zoom.jpg" class="d-block w-100" alt="bandeja de masas">
+                        <img src="img/bandeja-de-masas-zoom.webp" class="d-block w-100" alt="bandeja de masas">
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a href="pages/tortas.html">
-                        <img src="img/cheesecake-zoom.jpg" class="d-block w-100" alt="cheesecake">
+                        <img src="img/cheesecake-zoom.webp" class="d-block w-100" alt="cheesecake">
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a href="pages/pequenas-tentaciones.html">
-                        <img src="img/brownie-entero.jpg" class="d-block w-100" alt="brownie">
+                        <img src="img/brownie-entero.webp" class="d-block w-100" alt="brownie">
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a href="pages/pequenas-tentaciones.html">
-                        <img src="img/alfajor-nuez-zoom.jpg" class="d-block w-100" alt="alfajor de nuez">
+                        <img src="img/alfajor-nuez-entero.webp " class="d-block w-100" alt="alfajor de nuez">
                     </a>
                 </div>
             </div>
@@ -127,7 +129,7 @@
                 </div>
                 <div class="col-6 col-lg-3">
                     <img class="iconos" src="img/whatsapp.png" alt="logo whatsapp">
-                    +54 9 3515 08-7623
+                    <p class="num-tel">+54 9 3515 08-7623</p>
                 </div>
             </div>
 
