--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap" rel="stylesheet">
     <title>Contacto</title>
+    <meta name="description=" content="Contacto para la pagina de Lucia Navas Pastleria, ubicacion, whatsapp, instagram y facebook.">
+    <meta name="keywords" content="ubicacion, pasteleria, Lucia Navas, instagram, facebook, whatsapp">
     <link rel="shortcut icon" href="../img/logo.ico">
 </head>
 
@@ -48,7 +50,7 @@
         </nav>
     </header>
     <section id="logo">
-        <img src="../img/LogoLN.png" alt="logo Lucia Navas">
+        <img src="../img/LogoLN.webp" alt="logo Lucia Navas">
         <h1>CONTACTO</h1>
     </section>
     <div class="info-contacto">
@@ -107,7 +109,7 @@
                 </div>
                 <div class="col-6 col-lg-3">
                     <img class="iconos" src="../img/whatsapp.png" alt="logo whatsapp">
-                    +54 9 3515 08-7623
+                    <p class="num-tel">+54 9 3515 08-7623</p>
                 </div>
             </div>
 
