--- a/pages/tartas.html
+++ b/pages/tartas.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap" rel="stylesheet">
     <title>Tartas</title>
+    <meta name="description=" content="Venta de tartas dulces con ingredientes frescos y de calidad.">
+    <meta name="keywords" content="reposteria, tartas, dulces, eventos, mesa dulce, crema, dulce de leche, chocolate, coco, pasta frolla, alfajores, nuez">
     <link rel="shortcut icon" href="../img/logo.ico">
 </head>
 
@@ -50,7 +52,7 @@
     </header>
 
     <section id="logo">
-        <img src="../img/LogoLN.png" alt="logo Lucia Navas">
+        <img src="../img/LogoLN.webp" alt="logo Lucia Navas">
         <h1>TARTAS</h1>
     </section>
 
@@ -60,7 +62,7 @@
             <!--tarta beni-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/beni-zoom.jpg" alt="tarta cabsha">
+                    <img class="torta" src="../img/beni-zoom.webp" alt="tarta cabsha">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Tarta Beni</p>
                         <p class="precio-producto">$ 7000</p>
@@ -72,7 +74,7 @@
             <!--tarta de frutillas-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/frutillas-entera.jpg" alt="tarta de frutillas">
+                    <img class="torta" src="../img/frutillas-entera.webp" alt="tarta de frutillas">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Tarta de Frutillas</p>
                         <p class="precio-producto">$ 7000</p>
@@ -84,7 +86,7 @@
             <!--tarta de maracuya-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/maracuya-zoom.jpg" alt="tarta de maracuya">
+                    <img class="torta" src="../img/maracuya-zoom.webp" alt="tarta de maracuya">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Tarta de Maracuya</p>
                         <p class="precio-producto">$ 7000</p>
@@ -96,7 +98,7 @@
             <!--tarta de peras y almendras-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/peras-y-almendras-entera.jpg" alt="tarta de peras y almendras">
+                    <img class="torta" src="../img/peras-y-almendras-entera.webp" alt="tarta de peras y almendras">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Tarta de Peras y Almendras</p>
                         <p class="precio-producto">$ 6000</p>
@@ -108,7 +110,7 @@
             <!--pasta frolla-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/frolla-zoom.jpg" alt="pasta frolla">
+                    <img class="torta" src="../img/frolla-zoom.webp" alt="pasta frolla">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Pasta Frolla</p>
                         <p class="precio-producto">$ 3500</p>
@@ -120,7 +122,7 @@
             <!--tarta de coco-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/coco-zoom.jpg" alt="tarta de coco">
+                    <img class="torta" src="../img/coco-zoom.webp" alt="tarta de coco">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Tarta de Coco y Dulce de Leche</p>
                         <p class="precio-producto">$ 7000</p>
@@ -149,7 +151,7 @@
                 </div>
                 <div class="col-6 col-lg-3">
                     <img class="iconos" src="../img/whatsapp.png" alt="logo whatsapp">
-                    +54 9 3515 08-7623
+                    <p class="num-tel">+54 9 3515 08-7623</p>
                 </div>
             </div>
 
