--- a/pages/tortas.html
+++ b/pages/tortas.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">   
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="../css/styles.css " />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap" rel="stylesheet">
     <title>Tortas</title>
+    <meta name="description=" content="Venta de tortas con ingredientes de la mejor calidad">
+    <meta name="keywords" content="reposteria, tortas, dulces, eventos, mesa dulce, crema, dulce de leche, chocolate, cumpleaños, fiesta, frutillas, maracuya">
     <link rel="shortcut icon" href="../img/logo.ico">
 </head>
 
@@ -19,7 +21,7 @@
         <nav class="cajaNav navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a href="../index.html">
-                    <img class="logo-sombrero" src="../img/logo.png" alt="logo lucia navas">
+                    <img class="logo-sombrero" src="../img/logo.webp" alt="logo lucia navas">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +50,7 @@
         </nav>
     </header>
     <section id="logo">
-        <img src="../img/LogoLN.png" alt="logo Lucia Navas">
+        <img src="../img/LogoLN.webp" alt="logo Lucia Navas">
         <h1>TORTAS</h1>
     </section>
     <main>
@@ -57,7 +59,7 @@
         <!--chaja-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/chaja-entera.jpg" alt="torta chaja">
+                    <img class="torta" src="../img/chaja-entera.webp" alt="torta chaja">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Chajá</p>
                         <p class="precio-producto">$ 8000</p>
@@ -69,7 +71,7 @@
         <!--cheesecake-->    
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/cheesecake-zoom.jpg" alt="cheesecake">
+                    <img class="torta" src="../img/cheesecake-zoom.webp" alt="cheesecake">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Cheesecake</p>
                         <p class="precio-producto">$ 7500</p>
@@ -81,7 +83,7 @@
         <!--marquise--> 
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/marquise-arriba.jpg" alt="torta marquise">
+                    <img class="torta" src="../img/marquise-arriba.webp" alt="torta marquise">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Marquise</p>
                         <p class="precio-producto">$ 4500</p>
@@ -93,7 +95,7 @@
         <!--concorde--> 
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/concorde-zoom.jpg" alt="torta concorde">
+                    <img class="torta" src="../img/concorde-zoom.webp" alt="torta concorde">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Concorde</p>
                         <p class="precio-producto">$ 4000</p>
@@ -105,7 +107,7 @@
         <!--milhojas--> 
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/milhojas-entera.jpg" alt="torta milhojas">
+                    <img class="torta" src="../img/milhojas-entera.webp" alt="torta milhojas">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Milhojas</p>
                         <p class="precio-producto">$ 5000</p>
@@ -117,7 +119,7 @@
         <!--pavlova-->     
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/pavlova-entera.jpg" alt="torta pavlova">
+                    <img class="torta" src="../img/pavlova-entera.webp" alt="torta pavlova">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Pavlova</p>
                         <p class="precio-producto">$ 5000</p>
@@ -129,7 +131,7 @@
         <!--tiramisu--> 
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="torta" src="../img/tiramisu-zoom.jpg" alt="tiramisu">
+                    <img class="torta" src="../img/tiramisu-zoom.webp" alt="tiramisu">
                     <div class="descripción-producto">
                         <p class="nombre-producto">Tiramisu</p>
                         <p class="precio-producto">$ 7000</p>
@@ -157,7 +159,7 @@
                 </div>
                 <div class="col-6 col-lg-3">
                     <img class="iconos" src="../img/whatsapp.png " alt="logo whatsapp">
-                    +54 9 3515 08-7623
+                    <p class="num-tel">+54 9 3515 08-7623</p>
                 </div>
             </div>
 
