--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -70,7 +70,7 @@
             </div>
             <div class="logo-contacto">
                 <a href="https://www.facebook.com/LuciaNavasPasteleria" target="_blank"> <img class="iconos-contacto"
-                        src="../img/logotipo-circular-de-facebook.png" alt="logo facebook"></a>">
+                        src="../img/logotipo-circular-de-facebook.png" alt="logo facebook"></a>
                 <p>Seguinos en Facebook</p>
             </div>
         </section>
