haciendo el  boton del carrito interactivo

--- a/pages/tortas.html
+++ b/pages/tortas.html
@@ -108,7 +108,9 @@
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
     <!--Script de Javascript-->
-    <script src="scripts/tortas.js"></script>
+    <script src="../data/carrito.js"></script>
+    <script src="../data/productos.js"></script>
+    <script src="../scripts/tortas.js"></script>
 </body>
 
 </html>
