import and export files

--- a/pages/tartas.html
+++ b/pages/tartas.html
@@ -55,6 +55,12 @@
                         </li>
                     </ul>
                 </div>
+                <div class="seccion-carrito">
+                    <a href="pages/carrito.html"></a>
+
+                    <div class="cantidad-carrito js-cantidad-carrito">0</div>
+                    <img class="carrito" src="../img/carrito-rosa.png" alt="carrito de compras">
+                </div>
             </div>
         </nav>
     </header>
