--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <a href="index.html">
                     <img class="logo-sombrero" src="img/logo.png" alt="logo lucia navas">
                 </a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -55,6 +56,12 @@
                             <a class="nav-link" href="pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
+                </div>
+                <div class="seccion-carrito">
+                    <a href="pages/carrito.html"></a>
+
+                    <div class="cantidad-carrito js-cantidad-carrito">0</div>
+                    <img class="carrito" src="img/carrito-rosa.png" alt="carrito de compras">
                 </div>
             </div>
         </nav>
@@ -155,7 +162,7 @@
             </div>
         </div>
     </footer>
-<!--script de boostrap-->
+    <!--script de boostrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
