--- a/pages/tortas.html
+++ b/pages/tortas.html
@@ -55,6 +55,12 @@
                         </li>
                     </ul>
                 </div>
+                <div class="seccion-carrito">
+                    <a href="pages/carrito.html"></a>
+
+                    <div class="cantidad-carrito js-cantidad-carrito">0</div>
+                    <img class="carrito" src="../img/carrito-rosa.png" alt="carrito de compras">
+                </div>
             </div>
         </nav>
     </header>
@@ -108,9 +114,9 @@
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
     <!--Script de Javascript-->
-    <script src="../data/carrito.js"></script>
-    <script src="../data/productos.js"></script>
-    <script src="../scripts/tortas.js"></script>
+    
+    
+    <script type="module" src="../scripts/tortas.js"></script>
 </body>
 
 </html>
